# proto

./: .gitignore  Cargo.toml  Joshua's TODO.md  LICENSE.md  LLM.md  NOTES.md  README.md  experimenting.cpp  experimenting.pr  m  m.pr  main.go  proto.txt  t  t.cpp  t.h  x.pr  y.pr
.github/workflows/: rust.yml
analysis/: name_resolver.go  name_resolver_test.go
analysis/deref_expansion/: deref_expansion.go  deref_expansion_test.go
ast/: ast.go  expressions.go  statements.go  types.go
builtins/: builtins.go
cli/: cli.go
compile_manager/: compile_manager.go  project.go
compiler/: compiler.go  compiler_test.go  symbol_table.go  symbol_table_test.go
core/: arrays.pr  core.pr  io.pr  startup.pr  strings.pr  testing.pr
cpp_compiler/: cpp_compiler.go
docs/: language_desc.md  tbd.md
examples/: builtins.pr  check_ref.pr  cpp.pr  factorial.pr  fib.pr  fib_loop.pr  fib_rec.pr  full_name.pr  generics.pr  if.pr  imported_1.pr  imported_2.pr  imports.pr  int_ll.pr  lzw.pr  map_red_filter.pr  mod.pr  proto_tokens.pr  refs.pr  rle.pr  rot13.pr  sum_array.pr  temporary.pr  testing_refs.pr  tictactoe.pr
lexer/: lexer.go  lexer_test.go  tokens.go
opcode/: opcode.go  opcode_test.go
parser/: parser.go  parser_test.go
prelude/: prelude.h  prelude.hpp
project/: project.go
python/: infer.py  lzw.py  t.py  t.tcss
runtime/: object.go
shared/: shared.go
src/: ast.rs  common.rs  compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs
std/: strings.pr
tests/: common.rs  lexer_tests.rs  main.rs  parser_tests.rs
types/: types.go
vm/: vm.go  vm_test.go
(+278 files in other folders)
