[package]
name = "proto"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
insta = { version = "1.28.0", features = [ "glob", "yaml"] }

[dev-dependencies]
insta = { version = "1.28.0", features = [ "glob", "yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
