[package]
name = "proto"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.34.0", features = [ "glob", "yaml"] }
